<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_order"
        android:title="@string/menu_navigation_order"
        android:icon="@drawable/ic_orderlist"/>

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/menu_navigation_notification" />

    <item
        android:id="@+id/navigation_addPlan"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_navigation_addPlan" />

    <item
        android:id="@+id/navigation_myOrder"
        android:icon="@drawable/ic_myorder"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_navigation_myorder" />


    <item
        android:id="@+id/navigation_home"
        android:iconTint="@color/colorAccent"
        android:title="@string/menu_navigation_home"
        android:icon="@drawable/ic_user"/>
</menu>