<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="88dp"
            android:layout_height="82dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="歡迎使用CarPool"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/prompt_email"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="@string/prompt_password"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintTop_toBottomOf="@id/login_et_email" />

        <TextView
            android:id="@+id/login_tv_forgetPassWd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:onClick="onForgetPasswordButtonClick"
            android:text="@string/login_tv_forgetPassWd"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_button"
            android:onClick="onMemberSignInButtonClick"
            android:text="@string/login_btn_login"
            android:textColor="#168C6C"
            android:textSize="18sp" />

        <Button
            android:id="@+id/login_btn_visitorlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_white_button"
            android:onClick="onVisitorSignInButtonClick"
            android:text="@string/login_btn_visitorlogin"
            android:textColor="#168C6C"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onMemberSignUpButtonClick"
            android:text="@string/login_tv_register"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>