<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".view.register.IntroductionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:layout_margin="63dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_descript_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/descript_tv_title"
                android:textColor="@color/colorPrimary"
                android:textSize="31sp" />

            <TextView
                android:id="@+id/register_descript_tv_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/descript_tv_title2"
                android:textColor="@color/colorGrey"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_descript_btn_passenger"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/radius_green_button"
                    android:onClick="onPassengerButtonClick"
                    android:text="@string/descript_btn_passenger"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/register_descript_btn_driver"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/radius_green_button"
                    android:onClick="onDriverButtonClick"
                    android:text="@string/descript_btn_driver"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>