<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.DriverUpdateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/driver_license_tv_title"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/driver_sp_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/car_Brands" />

                <EditText
                    android:id="@+id/driver_ed_licenseNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/driver_ed_licenseNumber"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="選擇汽車照片"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/driver_iv_photo1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:onClick="onCarPhotoUpload1Click"
                        app:srcCompat="@drawable/carpic_1" />

                    <ImageView
                        android:id="@+id/driver_iv_photo2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:onClick="onCarPhotoUpload2Click"
                        app:srcCompat="@drawable/carpic_2" />

                    <ImageView
                        android:id="@+id/driver_iv_photo3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="onCarPhotoUpload3Click"
                        app:srcCompat="@drawable/carpic_2" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="上傳駕照相片"
                    android:layout_weight="1"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/driver_tv_licensePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="#E7E7E7"
                    android:gravity="center_vertical"
                    android:onClick="onCarLicenseUploadClick"
                    android:text="@string/driver_tv_uploadTitle"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/driver_btn_nextStep"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/radius_green_button"
                    android:onClick="onDriverRegisterNextStepButtonClick"
                    android:text="@string/user_btn_nextStep"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</LinearLayout>